--- a/.project
+++ b/.project
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>template-project</name>
+	<name>BLCU</name>
 	<comment></comment>
 	<projects>
 		<project>ST-LIB</project>
+		<project>FDCBootloader</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
